--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
 /*
 Theme Name: Medimist
 Theme URI: https://github.com/nicoleweathers/medimist
 Author: Nikki Weathers a.k.a. WebDGem
 Author URI: https://www.youtube.com/@webdgem
-Description: This begins as an html template on GitHub and evolves into a Full Site Editor or Hybrid WordPress theme. Every bit of the Ui was intentionally built in 'blocks' so that it could easily be converted to a WP block theme.
+Description: This on launch is an html template on GitHub and evolves into a Full Site Editor or Hybrid WordPress theme. Every bit of the Ui was intentionally built in 'blocks' so that it could easily be converted to a WP block theme.
 Version: 1.0.0
 */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
